--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "description": "Website for German design magazine \"sleak\"",
   "scripts": {
-    "serve": "parcel src/index.html -p 8080",
+    "serve": "parcel src/index.html -p 8080 && cp -rf ./src/articles ./dist/articles",
     "start": "npm run serve",
     "dev": "npm run serve",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html && cp -rf ./src/articles ./dist/articles",
     "lint": "eslint ./ --fix"
   },
   "repository": {
@@ -32,6 +32,7 @@
     "prettier": "1.13.4"
   },
   "dependencies": {
+    "intersection-observer": "^0.5.0",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0",
     "smoothscroll-polyfill": "^0.4.3"
