--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   },
   "homepage": "https://github.com/jonaskuske/sleak-magazine#readme",
   "devDependencies": {
-    "autoprefixer": "^8.6.3",
+    "autoprefixer": "^8.6.4",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "parcel-bundler": "^1.9.2",
+    "eslint-plugin-prettier": "^2.6.1",
+    "parcel-bundler": "^1.9.3",
     "parcel-plugin-clean-dist": "0.0.6",
+    "parcel-plugin-compress": "^1.0.3",
     "prettier": "1.13.4"
   },
   "dependencies": {
