--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run serve",
     "dev": "npm run serve",
-    "serve": "npm run copy:articles && parcel index.html -p 8080",
+    "serve": "npm run copy:articles && parcel index.html -p 8080 --no-cache",
     "build": "npm run copy:articles && parcel build index.html",
     "copy:articles": "mkdir -p ./dist/articles && cp -rf ./src/articles/* ./dist/articles/",
     "lint": "eslint ./ --fix"
@@ -31,10 +31,12 @@
     "parcel-bundler": "^1.9.3",
     "parcel-plugin-clean-dist": "0.0.6",
     "parcel-plugin-compress": "^1.0.3",
+    "postcss-focus-visible": "^4.0.0",
     "prettier": "1.13.4"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "focus-visible": "^4.1.5",
     "intersection-observer": "^0.5.0",
     "normalize.css": "^8.0.0",
     "smoothscroll-polyfill": "^0.4.3",
