--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "npm run serve",
     "dev": "npm run serve",
-    "serve": "npm run copy:articles && parcel index.html -p 8080 --no-cache",
-    "build": "npm run copy:articles && parcel build index.html",
-    "copy:articles": "mkdir -p ./dist/articles && cp -rf ./src/articles/* ./dist/articles/",
+    "serve": "parcel index.html -p 8080 --no-cache",
+    "build": "parcel build index.html",
     "lint": "eslint ./ --fix"
   },
   "repository": {
@@ -31,6 +30,7 @@
     "parcel-bundler": "^1.9.3",
     "parcel-plugin-clean-dist": "0.0.6",
     "parcel-plugin-compress": "^1.0.3",
+    "parcel-plugin-static": "^1.0.0",
     "postcss-focus-visible": "^4.0.0",
     "prettier": "1.13.4"
   },
@@ -47,6 +47,10 @@
     "ie > 9",
     "> 1%"
   ],
+  "parcel-plugin-static": {
+    "source": "static",
+    "destination": ""
+  },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
