--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run serve",
     "dev": "npm run serve",
     "serve": "parcel index.html -p 8080 --no-cache",
-    "build": "parcel build index.html --no-cache --public-url /sleak/",
+    "build": "parcel build index.html --no-cache",
     "lint": "eslint ./ --fix"
   },
   "repository": {
@@ -29,8 +29,8 @@
     "eslint-config-prettier": "^2.10.0",
     "eslint-plugin-prettier": "^2.7.0",
     "parcel-bundler": "^1.10.3",
+    "parcel-plugin-bundle-manifest": "^0.2.0",
     "parcel-plugin-clean-dist": "0.0.6",
-    "parcel-plugin-compress": "^1.0.6",
     "parcel-plugin-static": "^1.0.0",
     "postcss-focus-visible": "^4.0.0",
     "prettier": "1.13.4"
