--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -1,5 +1,43 @@
 {
   "index.html": "/index.html",
+  "apple-icon-57x57.cb18aa0e.png": "/apple-icon-57x57.cb18aa0e.57223426.png",
+  "apple-icon-60x60.9d5af3da.png": "/apple-icon-60x60.9d5af3da.1e12bfd2.png",
+  "apple-icon-72x72.900c6d81.png": "/apple-icon-72x72.900c6d81.e6312ac1.png",
+  "apple-icon-76x76.fed0a850.png": "/apple-icon-76x76.fed0a850.a8847935.png",
+  "apple-icon-114x114.041be133.png": "/apple-icon-114x114.041be133.2fe06cd5.png",
+  "apple-icon-120x120.3eb65e82.png": "/apple-icon-120x120.3eb65e82.676b34ab.png",
+  "apple-icon-144x144.4814b7ab.png": "/apple-icon-144x144.4814b7ab.c209fccd.png",
+  "apple-icon-152x152.a12497a8.png": "/apple-icon-152x152.a12497a8.2a5dbae6.png",
+  "apple-icon-180x180.c63da61c.png": "/apple-icon-180x180.c63da61c.13735370.png",
+  "android-icon-192x192.a15448df.png": "/android-icon-192x192.a15448df.b9975417.png",
+  "favicon-32x32.31603053.png": "/favicon-32x32.31603053.93a63003.png",
+  "favicon-96x96.a11b218b.png": "/favicon-96x96.a11b218b.54d2c07c.png",
+  "favicon-16x16.62f4017a.png": "/favicon-16x16.62f4017a.31663fbb.png",
+  "manifest.11b4e502.webmanifest": "/manifest.11b4e502.a38269eb.webmanifest",
+  "android-icon-36x36.357992ce.png": "/android-icon-36x36.357992ce.a4c35728.png",
+  "android-icon-48x48.453bb705.png": "/android-icon-48x48.453bb705.4f06a7f2.png",
+  "android-icon-72x72.900c6d81.png": "/android-icon-72x72.900c6d81.730546d0.png",
+  "android-icon-96x96.a11b218b.png": "/android-icon-96x96.a11b218b.1a8ddf3c.png",
+  "android-icon-144x144.4814b7ab.png": "/android-icon-144x144.4814b7ab.d647b60e.png",
+  "ms-icon-144x144.b6c72459.png": "/ms-icon-144x144.b6c72459.5aafc29c.png",
+  "main.8bcc4678.js": "/main.8bcc4678.c25d7d61.js",
+  "serviceworker.js": "/serviceworker.js",
+  "main.02d15379.css": "/main.02d15379.9272a44c.css",
+  "BebasNeue.543f6143.otf": "/BebasNeue.543f6143.e4692fc9.otf",
+  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/main.02d15379.9272a44c.map",
+  "sleak-logo.7441a400.svg": "/sleak-logo.7441a400.b2e38eef.svg",
+  "team.html": "/team.html",
+  "team.42a82fc7.js": "/team.42a82fc7.6ebd314b.js",
+  "team.02d15379.css": "/team.02d15379.815fba38.css",
+  "kontakt.html": "/kontakt.html",
+  "appshell.b72b5023.js": "/appshell.b72b5023.aa60c30c.js",
+  "appshell.02d15379.css": "/appshell.02d15379.6813916d.css",
+  "impressum.html": "/impressum.html",
+  "imprint.f28f18a6.js": "/imprint.f28f18a6.34cbbad9.js",
+  "imprint.02d15379.css": "/imprint.02d15379.0ed47b0d.css",
+  "datenschutz.html": "/datenschutz.html",
+  "privacy.ff051a3c.js": "/privacy.ff051a3c.516676b7.js",
+  "privacy.02d15379.css": "/privacy.02d15379.20fb31da.css",
   "src/assets/icons/apple-icon-57x57.png": "/apple-icon-57x57.cb18aa0e.png",
   "src/assets/icons/apple-icon-60x60.png": "/apple-icon-60x60.9d5af3da.png",
   "src/assets/icons/apple-icon-72x72.png": "/apple-icon-72x72.900c6d81.png",
@@ -20,17 +58,12 @@
   "src/assets/icons/android-icon-96x96.png": "/android-icon-96x96.a11b218b.png",
   "src/assets/icons/android-icon-144x144.png": "/android-icon-144x144.4814b7ab.png",
   "src/assets/icons/ms-icon-144x144.png": "/ms-icon-144x144.b6c72459.png",
-  "src/main.js": "/main.8bcc4678.js",
-  "src/assets/styles/fonts.css": "/main.02d15379.css",
+  "src/main.js": "/main.afe62291.js",
+  "src/assets/styles/fonts.css": "/main.37109eb5.css",
   "src/assets/fonts/BebasNeue.otf": "/BebasNeue.543f6143.otf",
-  "serviceworker.js": "/serviceworker.js",
   "src/assets/images/sleak-logo.svg": "/sleak-logo.7441a400.svg",
-  "team.html": "/team.html",
-  "src/team.js": "/team.42a82fc7.js",
-  "kontakt.html": "/kontakt.html",
-  "src/utils/appshell.js": "/appshell.b72b5023.js",
-  "impressum.html": "/impressum.html",
-  "src/imprint.js": "/imprint.f28f18a6.js",
-  "datenschutz.html": "/datenschutz.html",
-  "src/privacy.js": "/privacy.ff051a3c.js"
+  "src/team.js": "/team.beb8b1ba.js",
+  "src/utils/appshell.js": "/appshell.6dcfc7ef.js",
+  "src/imprint.js": "/imprint.78e78975.js",
+  "src/privacy.js": "/privacy.94ff2ba6.js"
 }
