Deploy | Sunday, October 21, 2018, 16:42

--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -34,6 +34,5 @@
   "rechtliches.html": "/rechtliches.html",
   "src/imprint.js": "/imprint.6c2962ce.js",
   "src/assets/images/sleak-print.png": "/sleak-print.aacbb81b.png",
-  "src/assets/images/magazine-opened.png": "/magazine-opened.8cb85426.png",
-  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js"
+  "src/assets/images/magazine-opened.png": "/magazine-opened.8cb85426.png"
 }
