Deploy | Thursday, November 1, 2018, 15:51

--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -22,17 +22,18 @@
   "src/assets/icons/android-icon-512x512.png": "/android-icon-512x512.b3f27cdc.png",
   "src/assets/icons/android-icon-1024x1024.png": "/android-icon-1024x1024.8018bda3.png",
   "src/assets/icons/ms-icon-144x144.png": "/ms-icon-144x144.b6c72459.png",
-  "src/main.js": "/main.4559b63f.js",
-  "src/assets/styles/fonts.css": "/main.886a136b.css",
+  "src/main.js": "/main.ebcd46b1.js",
+  "src/assets/styles/fonts.css": "/main.c0874fb5.css",
   "src/assets/fonts/BebasNeue.otf": "/BebasNeue.543f6143.otf",
+  "src/assets/images/image-loading.svg": "/image-loading.91ecacb7.svg",
   "serviceworker.js": "/serviceworker.js",
   "src/assets/images/sleak-logo.svg": "/sleak-logo.7441a400.svg",
   "team.html": "/team.html",
-  "src/team.js": "/team.421c0baf.js",
+  "src/team.js": "/team.72e801ab.js",
   "print.html": "/print.html",
-  "src/utils/appshell.js": "/appshell.ef32a6d7.js",
+  "src/utils/appshell.js": "/appshell.3d5e44cc.js",
   "rechtliches.html": "/rechtliches.html",
-  "src/imprint.js": "/imprint.6c2962ce.js",
+  "src/imprint.js": "/imprint.21e93a78.js",
   "src/assets/images/sleak-print.png": "/sleak-print.aacbb81b.png",
   "src/assets/images/magazine-opened.png": "/magazine-opened.8cb85426.png"
 }
