Deploy | Thursday, November 1, 2018, 23:49

--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -22,18 +22,36 @@
   "src/assets/icons/android-icon-512x512.png": "/android-icon-512x512.b3f27cdc.png",
   "src/assets/icons/android-icon-1024x1024.png": "/android-icon-1024x1024.8018bda3.png",
   "src/assets/icons/ms-icon-144x144.png": "/ms-icon-144x144.b6c72459.png",
-  "src/main.js": "/main.ebcd46b1.js",
-  "src/assets/styles/fonts.css": "/main.c0874fb5.css",
+  "src/main.js": "/main.9bd795b7.js",
+  "src/assets/styles/fonts.css": "/main.ecf47b8d.css",
   "src/assets/fonts/BebasNeue.otf": "/BebasNeue.543f6143.otf",
   "src/assets/images/image-loading.svg": "/image-loading.91ecacb7.svg",
   "serviceworker.js": "/serviceworker.js",
   "src/assets/images/sleak-logo.svg": "/sleak-logo.7441a400.svg",
   "team.html": "/team.html",
-  "src/team.js": "/team.72e801ab.js",
+  "src/team.js": "/team.b3b07183.js",
   "print.html": "/print.html",
-  "src/utils/appshell.js": "/appshell.3d5e44cc.js",
+  "src/utils/appshell.js": "/appshell.3d552c4e.js",
   "rechtliches.html": "/rechtliches.html",
-  "src/imprint.js": "/imprint.21e93a78.js",
+  "src/imprint.js": "/imprint.aab11421.js",
   "src/assets/images/sleak-print.png": "/sleak-print.aacbb81b.png",
-  "src/assets/images/magazine-opened.png": "/magazine-opened.8cb85426.png"
+  "src/assets/images/magazine-opened.png": "/magazine-opened.8cb85426.png",
+  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js",
+  "src/assets/images/team/felix.jpg": "/felix.384cc794.jpg",
+  "src/assets/images/team/michaela.jpg": "/michaela.790d37ed.jpg",
+  "src/assets/images/team/viktoria.jpg": "/viktoria.65ee8672.jpg",
+  "src/assets/images/team/max.jpg": "/max.855a4461.jpg",
+  "src/assets/images/team/sevda.jpg": "/sevda.20cb27e0.jpg",
+  "src/assets/images/team/julien.jpg": "/julien.bcddd898.jpg",
+  "src/assets/images/team/jonas.jpg": "/jonas.b9a87cf6.jpg",
+  "src/assets/images/team/marvin.jpg": "/marvin.55860b8d.jpg",
+  "src/assets/images/team/lena.jpg": "/lena.3c004044.jpg",
+  "src/assets/images/team/rieke.jpg": "/rieke.3fb0948c.jpg",
+  "src/assets/images/team/jennie.jpg": "/jennie.48fcc543.jpg",
+  "src/assets/images/team/judith.jpg": "/judith.7bc574d5.jpg",
+  "src/assets/images/team/axel.jpg": "/axel.0e02c6b7.jpg",
+  "src/assets/images/team/andreas.jpg": "/andreas.e9bc76dc.jpg",
+  "src/assets/images/team/nadine.jpg": "/nadine.c3512eff.jpg",
+  "src/assets/images/team/lia.jpg": "/lia.a8db0ce9.jpg",
+  "src/assets/images/team/janina.jpg": "/janina.316fa12e.jpg"
 }
