Deploy | Tuesday, November 6, 2018, 22:18

--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -22,36 +22,40 @@
   "src/assets/icons/android-icon-512x512.png": "/android-icon-512x512.b3f27cdc.png",
   "src/assets/icons/android-icon-1024x1024.png": "/android-icon-1024x1024.8018bda3.png",
   "src/assets/icons/ms-icon-144x144.png": "/ms-icon-144x144.b6c72459.png",
-  "src/main.js": "/main.9bd795b7.js",
-  "src/assets/styles/fonts.css": "/main.ecf47b8d.css",
+  "src/main.js": "/main.3c9c8013.js",
+  "src/assets/styles/fonts.css": "/main.54452a28.css",
   "src/assets/fonts/BebasNeue.otf": "/BebasNeue.543f6143.otf",
   "src/assets/images/image-loading.svg": "/image-loading.91ecacb7.svg",
   "serviceworker.js": "/serviceworker.js",
   "src/assets/images/sleak-logo.svg": "/sleak-logo.7441a400.svg",
   "team.html": "/team.html",
-  "src/team.js": "/team.b3b07183.js",
+  "src/team.js": "/team.1299bc99.js",
   "print.html": "/print.html",
-  "src/utils/appshell.js": "/appshell.3d552c4e.js",
+  "src/utils/appshell.js": "/appshell.dd95ff64.js",
   "rechtliches.html": "/rechtliches.html",
-  "src/imprint.js": "/imprint.aab11421.js",
-  "src/assets/images/sleak-print.png": "/sleak-print.aacbb81b.png",
-  "src/assets/images/magazine-opened.png": "/magazine-opened.8cb85426.png",
+  "src/imprint.js": "/imprint.22c115ee.js",
+  "src/assets/images/sleak-print.png": "/sleak-print.6fe80f1d.png",
+  "src/assets/images/magazine-opened.png": "/magazine-opened.48b44de0.png",
   "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js",
-  "src/assets/images/team/felix.jpg": "/felix.384cc794.jpg",
-  "src/assets/images/team/michaela.jpg": "/michaela.790d37ed.jpg",
-  "src/assets/images/team/viktoria.jpg": "/viktoria.65ee8672.jpg",
-  "src/assets/images/team/max.jpg": "/max.855a4461.jpg",
-  "src/assets/images/team/sevda.jpg": "/sevda.20cb27e0.jpg",
-  "src/assets/images/team/julien.jpg": "/julien.bcddd898.jpg",
-  "src/assets/images/team/jonas.jpg": "/jonas.b9a87cf6.jpg",
-  "src/assets/images/team/marvin.jpg": "/marvin.55860b8d.jpg",
-  "src/assets/images/team/lena.jpg": "/lena.3c004044.jpg",
-  "src/assets/images/team/rieke.jpg": "/rieke.3fb0948c.jpg",
-  "src/assets/images/team/jennie.jpg": "/jennie.48fcc543.jpg",
-  "src/assets/images/team/judith.jpg": "/judith.7bc574d5.jpg",
-  "src/assets/images/team/axel.jpg": "/axel.0e02c6b7.jpg",
-  "src/assets/images/team/andreas.jpg": "/andreas.e9bc76dc.jpg",
-  "src/assets/images/team/nadine.jpg": "/nadine.c3512eff.jpg",
-  "src/assets/images/team/lia.jpg": "/lia.a8db0ce9.jpg",
-  "src/assets/images/team/janina.jpg": "/janina.316fa12e.jpg"
+  "src/assets/images/team/felix.jpg": "/sleak/felix.c18d6a85.jpg",
+  "src/assets/images/team/michaela.jpg": "/sleak/michaela.b3caf84a.jpg",
+  "src/assets/images/team/viktoria.jpg": "/sleak/viktoria.3d42f0f8.jpg",
+  "src/assets/images/team/max.jpg": "/sleak/max.e4e28dfe.jpg",
+  "src/assets/images/team/sevda.jpg": "/sleak/sevda.4338c591.jpg",
+  "src/assets/images/team/julien.jpg": "/sleak/julien.64a71d70.jpg",
+  "src/assets/images/team/jonas.jpg": "/sleak/jonas.2d13705e.jpg",
+  "src/assets/images/team/marvin.jpg": "/sleak/marvin.e9ef50dd.jpg",
+  "src/assets/images/team/lena.jpg": "/sleak/lena.0dd6281f.jpg",
+  "src/assets/images/team/rieke.jpg": "/sleak/rieke.b8e60005.jpg",
+  "src/assets/images/team/jennie.jpg": "/sleak/jennie.a91bce68.jpg",
+  "src/assets/images/team/judith.jpg": "/sleak/judith.c5ffacf2.jpg",
+  "src/assets/images/team/axel.jpg": "/sleak/axel.d44cc483.jpg",
+  "src/assets/images/team/andreas.jpg": "/sleak/andreas.5fdf51fe.jpg",
+  "src/assets/images/team/nadine.jpg": "/sleak/nadine.7ff03fd7.jpg",
+  "src/assets/images/team/lia.jpg": "/sleak/lia.67bfc31e.jpg",
+  "src/assets/images/team/janina.jpg": "/sleak/janina.86791264.jpg",
+  "src/assets/images/sleak-print.jpg": "/sleak-print.2b889f06.jpg",
+  "src/assets/images/magazine-opened.jpg": "/magazine-opened.eb45e9cc.jpg",
+  "src/assets/images/magazine-opened-cropped.jpg": "/magazine-opened-cropped.a789b341.jpg",
+  "src/assets/images/magazine-opened-resized.jpg": "/magazine-opened-resized.84d4726b.jpg"
 }
