--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -34,28 +34,7 @@
   "src/utils/appshell.js": "/appshell.dd95ff64.js",
   "rechtliches.html": "/rechtliches.html",
   "src/imprint.js": "/imprint.22c115ee.js",
-  "src/assets/images/sleak-print.png": "/sleak-print.6fe80f1d.png",
-  "src/assets/images/magazine-opened.png": "/magazine-opened.48b44de0.png",
-  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js",
-  "src/assets/images/team/felix.jpg": "/sleak/felix.c18d6a85.jpg",
-  "src/assets/images/team/michaela.jpg": "/sleak/michaela.b3caf84a.jpg",
-  "src/assets/images/team/viktoria.jpg": "/sleak/viktoria.3d42f0f8.jpg",
-  "src/assets/images/team/max.jpg": "/sleak/max.e4e28dfe.jpg",
-  "src/assets/images/team/sevda.jpg": "/sleak/sevda.4338c591.jpg",
-  "src/assets/images/team/julien.jpg": "/sleak/julien.64a71d70.jpg",
-  "src/assets/images/team/jonas.jpg": "/sleak/jonas.2d13705e.jpg",
-  "src/assets/images/team/marvin.jpg": "/sleak/marvin.e9ef50dd.jpg",
-  "src/assets/images/team/lena.jpg": "/sleak/lena.0dd6281f.jpg",
-  "src/assets/images/team/rieke.jpg": "/sleak/rieke.b8e60005.jpg",
-  "src/assets/images/team/jennie.jpg": "/sleak/jennie.a91bce68.jpg",
-  "src/assets/images/team/judith.jpg": "/sleak/judith.c5ffacf2.jpg",
-  "src/assets/images/team/axel.jpg": "/sleak/axel.d44cc483.jpg",
-  "src/assets/images/team/andreas.jpg": "/sleak/andreas.5fdf51fe.jpg",
-  "src/assets/images/team/nadine.jpg": "/sleak/nadine.7ff03fd7.jpg",
-  "src/assets/images/team/lia.jpg": "/sleak/lia.67bfc31e.jpg",
-  "src/assets/images/team/janina.jpg": "/sleak/janina.86791264.jpg",
   "src/assets/images/sleak-print.jpg": "/sleak-print.2b889f06.jpg",
-  "src/assets/images/magazine-opened.jpg": "/magazine-opened.eb45e9cc.jpg",
   "src/assets/images/magazine-opened-cropped.jpg": "/magazine-opened-cropped.a789b341.jpg",
-  "src/assets/images/magazine-opened-resized.jpg": "/magazine-opened-resized.84d4726b.jpg"
+  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js"
 }
