--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -22,19 +22,38 @@
   "src/assets/icons/android-icon-512x512.png": "/android-icon-512x512.b3f27cdc.png",
   "src/assets/icons/android-icon-1024x1024.png": "/android-icon-1024x1024.8018bda3.png",
   "src/assets/icons/ms-icon-144x144.png": "/ms-icon-144x144.b6c72459.png",
-  "src/main.js": "/main.3c9c8013.js",
-  "src/assets/styles/fonts.css": "/main.54452a28.css",
+  "src/main.js": "/main.844dcd98.js",
+  "src/assets/styles/fonts.css": "/main.fbd79798.css",
   "src/assets/fonts/BebasNeue.otf": "/BebasNeue.543f6143.otf",
   "src/assets/images/image-loading.svg": "/image-loading.91ecacb7.svg",
   "serviceworker.js": "/serviceworker.js",
   "src/assets/images/sleak-logo.svg": "/sleak-logo.7441a400.svg",
   "team.html": "/team.html",
-  "src/team.js": "/team.1299bc99.js",
+  "src/team.js": "/team.c1491d66.js",
   "print.html": "/print.html",
-  "src/utils/appshell.js": "/appshell.dd95ff64.js",
+  "src/utils/appshell.js": "/appshell.63ae86cc.js",
   "rechtliches.html": "/rechtliches.html",
-  "src/imprint.js": "/imprint.22c115ee.js",
+  "src/imprint.js": "/imprint.f00d7683.js",
+  "src/assets/images/sleak-print.png": "/sleak-print.6fe80f1d.png",
+  "src/assets/images/magazine-opened.jpg": "/magazine-opened.eb45e9cc.jpg",
+  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js",
   "src/assets/images/sleak-print.jpg": "/sleak-print.2b889f06.jpg",
   "src/assets/images/magazine-opened-cropped.jpg": "/magazine-opened-cropped.a789b341.jpg",
-  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js"
+  "src/assets/images/team/felix.jpg": "/felix.c18d6a85.jpg",
+  "src/assets/images/team/michaela.jpg": "/michaela.b3caf84a.jpg",
+  "src/assets/images/team/viktoria.jpg": "/viktoria.3d42f0f8.jpg",
+  "src/assets/images/team/max.jpg": "/max.e4e28dfe.jpg",
+  "src/assets/images/team/sevda.jpg": "/sevda.4338c591.jpg",
+  "src/assets/images/team/julien.jpg": "/julien.64a71d70.jpg",
+  "src/assets/images/team/jonas.jpg": "/jonas.2d13705e.jpg",
+  "src/assets/images/team/marvin.jpg": "/marvin.e9ef50dd.jpg",
+  "src/assets/images/team/lena.jpg": "/lena.0dd6281f.jpg",
+  "src/assets/images/team/rieke.jpg": "/rieke.b8e60005.jpg",
+  "src/assets/images/team/jennie.jpg": "/jennie.a91bce68.jpg",
+  "src/assets/images/team/judith.jpg": "/judith.c5ffacf2.jpg",
+  "src/assets/images/team/lia.jpg": "/lia.67bfc31e.jpg",
+  "src/assets/images/team/nadine.jpg": "/nadine.7ff03fd7.jpg",
+  "src/assets/images/team/janina.jpg": "/janina.86791264.jpg",
+  "src/assets/images/team/axel.jpg": "/axel.d44cc483.jpg",
+  "src/assets/images/team/andreas.jpg": "/andreas.5fdf51fe.jpg"
 }
