Deploy | Wednesday, November 7, 2018, 20:40

--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -34,11 +34,10 @@
   "src/utils/appshell.js": "/appshell.63ae86cc.js",
   "rechtliches.html": "/rechtliches.html",
   "src/imprint.js": "/imprint.f00d7683.js",
-  "src/assets/images/sleak-print.png": "/sleak-print.6fe80f1d.png",
-  "src/assets/images/magazine-opened.jpg": "/magazine-opened.eb45e9cc.jpg",
-  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js",
   "src/assets/images/sleak-print.jpg": "/sleak-print.2b889f06.jpg",
   "src/assets/images/magazine-opened-cropped.jpg": "/magazine-opened-cropped.a789b341.jpg",
+  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js",
+  "src/assets/images/sleak-opened-2200x.jpg": "/sleak-opened-2200x.0109bfb5.jpg",
   "src/assets/images/team/felix.jpg": "/felix.c18d6a85.jpg",
   "src/assets/images/team/michaela.jpg": "/michaela.b3caf84a.jpg",
   "src/assets/images/team/viktoria.jpg": "/viktoria.3d42f0f8.jpg",
