--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sleak-magazine",
   "private": true,
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Website for German design magazine \"sleak\"",
   "scripts": {
     "start": "npm run serve",
@@ -36,14 +36,15 @@
     "parcel-plugin-static": "^1.0.0",
     "postcss-focus-visible": "^4.0.0",
     "prettier": "1.13.4",
-    "simple-git": "^1.105.0",
+    "simple-git": "^1.107.0",
     "write-pkg": "^3.2.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "focus-visible": "^4.1.5",
-    "intersection-observer": "^0.5.0",
-    "normalize.css": "^8.0.0",
+    "intersection-observer": "^0.5.1",
+    "normalize.css": "^8.0.1",
+    "smoothscroll-anchor-polyfill": "^0.9.4",
     "smoothscroll-polyfill": "^0.4.3",
     "stickyfilljs": "^2.1.0",
     "whatwg-fetch": "^2.0.4"
