Deploy | Sunday, November 11, 2018, 11:40

--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -22,18 +22,18 @@
   "src/assets/icons/android-icon-512x512.png": "/android-icon-512x512.b3f27cdc.png",
   "src/assets/icons/android-icon-1024x1024.png": "/android-icon-1024x1024.8018bda3.png",
   "src/assets/icons/ms-icon-144x144.png": "/ms-icon-144x144.b6c72459.png",
-  "src/main.js": "/main.844dcd98.js",
-  "src/assets/styles/fonts.css": "/main.fbd79798.css",
+  "src/main.js": "/main.11138360.js",
+  "src/assets/styles/fonts.css": "/main.2a68a589.css",
   "src/assets/fonts/BebasNeue.otf": "/BebasNeue.543f6143.otf",
   "src/assets/images/image-loading.svg": "/image-loading.91ecacb7.svg",
   "serviceworker.js": "/serviceworker.js",
   "src/assets/images/sleak-logo.svg": "/sleak-logo.7441a400.svg",
   "team.html": "/team.html",
-  "src/team.js": "/team.c1491d66.js",
+  "src/team.js": "/team.fa7d5cd9.js",
   "print.html": "/print.html",
-  "src/utils/appshell.js": "/appshell.63ae86cc.js",
+  "src/utils/appshell.js": "/appshell.7cbd970a.js",
   "rechtliches.html": "/rechtliches.html",
-  "src/imprint.js": "/imprint.f00d7683.js",
+  "src/imprint.js": "/imprint.204a349a.js",
   "src/assets/images/sleak-print.jpg": "/sleak-print.2b889f06.jpg",
   "src/assets/images/magazine-opened-cropped.jpg": "/magazine-opened-cropped.a789b341.jpg",
   "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js",
@@ -54,5 +54,6 @@
   "src/assets/images/team/nadine.jpg": "/nadine.7ff03fd7.jpg",
   "src/assets/images/team/janina.jpg": "/janina.86791264.jpg",
   "src/assets/images/team/axel.jpg": "/axel.d44cc483.jpg",
-  "src/assets/images/team/andreas.jpg": "/andreas.5fdf51fe.jpg"
+  "src/assets/images/team/andreas.jpg": "/andreas.5fdf51fe.jpg",
+  "node_modules/smoothscroll-anchor-polyfill/dist/index.js": "/dist.1520fd8a.js"
 }
