Deploy | Sunday, November 11, 2018, 17:12

--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -22,22 +22,21 @@
   "src/assets/icons/android-icon-512x512.png": "/android-icon-512x512.b3f27cdc.png",
   "src/assets/icons/android-icon-1024x1024.png": "/android-icon-1024x1024.8018bda3.png",
   "src/assets/icons/ms-icon-144x144.png": "/ms-icon-144x144.b6c72459.png",
-  "src/main.js": "/main.11138360.js",
-  "src/assets/styles/fonts.css": "/main.2a68a589.css",
+  "src/main.js": "/main.1596829b.js",
+  "src/assets/styles/fonts.css": "/main.ad8ac7e7.css",
   "src/assets/fonts/BebasNeue.otf": "/BebasNeue.543f6143.otf",
   "src/assets/images/image-loading.svg": "/image-loading.91ecacb7.svg",
   "serviceworker.js": "/serviceworker.js",
   "src/assets/images/sleak-logo.svg": "/sleak-logo.7441a400.svg",
   "team.html": "/team.html",
-  "src/team.js": "/team.fa7d5cd9.js",
+  "src/team.js": "/team.99348091.js",
   "print.html": "/print.html",
-  "src/utils/appshell.js": "/appshell.7cbd970a.js",
+  "src/utils/appshell.js": "/appshell.965a88bf.js",
   "rechtliches.html": "/rechtliches.html",
-  "src/imprint.js": "/imprint.204a349a.js",
+  "src/imprint.js": "/imprint.99f3fe52.js",
   "src/assets/images/sleak-print.jpg": "/sleak-print.2b889f06.jpg",
-  "src/assets/images/magazine-opened-cropped.jpg": "/magazine-opened-cropped.a789b341.jpg",
-  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js",
   "src/assets/images/sleak-opened-2200x.jpg": "/sleak-opened-2200x.0109bfb5.jpg",
+  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/print.js",
   "src/assets/images/team/felix.jpg": "/felix.c18d6a85.jpg",
   "src/assets/images/team/michaela.jpg": "/michaela.b3caf84a.jpg",
   "src/assets/images/team/viktoria.jpg": "/viktoria.3d42f0f8.jpg",
@@ -54,6 +53,5 @@
   "src/assets/images/team/nadine.jpg": "/nadine.7ff03fd7.jpg",
   "src/assets/images/team/janina.jpg": "/janina.86791264.jpg",
   "src/assets/images/team/axel.jpg": "/axel.d44cc483.jpg",
-  "src/assets/images/team/andreas.jpg": "/andreas.5fdf51fe.jpg",
-  "node_modules/smoothscroll-anchor-polyfill/dist/index.js": "/dist.1520fd8a.js"
+  "src/assets/images/team/andreas.jpg": "/andreas.5fdf51fe.jpg"
 }
