--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "version": "1.3.1",
   "description": "Website for German design magazine \"sleak\"",
   "scripts": {
-    "start": "npm run serve",
-    "dev": "npm run serve",
     "serve": "parcel index.html -p 8080 --no-cache --hmr-port 8081",
     "build": "parcel build index.html --no-cache",
     "deploy": "npm run build && node scripts/deploy.js",
@@ -30,6 +28,7 @@
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.0",
     "gh-pages": "^2.0.1",
+    "lint-staged": "^8.0.4",
     "parcel-bundler": "^1.10.3",
     "parcel-plugin-bundle-manifest": "^0.2.0",
     "parcel-plugin-clean-dist": "0.0.6",
@@ -37,7 +36,8 @@
     "postcss-focus-visible": "^4.0.0",
     "prettier": "^1.15.2",
     "simple-git": "^1.107.0",
-    "write-pkg": "^3.2.0"
+    "write-pkg": "^3.2.0",
+    "yorkie": "^2.0.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -58,13 +58,21 @@
     "source": "static",
     "destination": ""
   },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,json,css,md,html}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
     "semi": true
   },
   "eslintConfig": {
-    "root": true,
     "extends": [
       "plugin:prettier/recommended"
     ],
