--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -1,33 +1,33 @@
 {
-  "index.html": "/index.html",
-  "src/assets/icons/apple-icon-57x57.png": "/apple-icon-57x57.cb18aa0e.png",
-  "src/assets/icons/apple-icon-60x60.png": "/apple-icon-60x60.9d5af3da.png",
-  "src/assets/icons/apple-icon-72x72.png": "/apple-icon-72x72.900c6d81.png",
-  "src/assets/icons/apple-icon-76x76.png": "/apple-icon-76x76.fed0a850.png",
-  "src/assets/icons/apple-icon-114x114.png": "/apple-icon-114x114.041be133.png",
-  "src/assets/icons/apple-icon-120x120.png": "/apple-icon-120x120.3eb65e82.png",
-  "src/assets/icons/apple-icon-144x144.png": "/apple-icon-144x144.4814b7ab.png",
-  "src/assets/icons/apple-icon-152x152.png": "/apple-icon-152x152.a12497a8.png",
-  "src/assets/icons/apple-icon-180x180.png": "/apple-icon-180x180.c63da61c.png",
-  "src/assets/icons/android-icon-192x192.png": "/android-icon-192x192.a15448df.png",
-  "src/assets/icons/favicon-32x32.png": "/favicon-32x32.31603053.png",
-  "src/assets/icons/favicon-96x96.png": "/favicon-96x96.a11b218b.png",
-  "src/assets/icons/favicon-16x16.png": "/favicon-16x16.62f4017a.png",
-  "src/assets/manifest.webmanifest": "/manifest.12c4c246.webmanifest",
-  "src/assets/icons/android-icon-36x36.png": "/android-icon-36x36.357992ce.png",
-  "src/assets/icons/android-icon-48x48.png": "/android-icon-48x48.453bb705.png",
-  "src/assets/icons/android-icon-72x72.png": "/android-icon-72x72.900c6d81.png",
-  "src/assets/icons/android-icon-96x96.png": "/android-icon-96x96.a11b218b.png",
-  "src/assets/icons/android-icon-144x144.png": "/android-icon-144x144.4814b7ab.png",
-  "src/assets/icons/android-icon-512x512.png": "/android-icon-512x512.b3f27cdc.png",
-  "src/assets/icons/android-icon-1024x1024.png": "/android-icon-1024x1024.8018bda3.png",
-  "src/assets/icons/ms-icon-144x144.png": "/ms-icon-144x144.b6c72459.png",
-  "src/main.js": "/main.f0adac8b.js",
-  "src/assets/styles/fonts.css": "/main.0fceae8a.css",
-  "src/assets/fonts/BebasNeue.otf": "/BebasNeue.543f6143.otf",
-  "src/assets/images/image-loading.svg": "/image-loading.91ecacb7.svg",
-  "serviceworker.js": "/serviceworker.js",
-  "src/assets/images/sleak-logo.svg": "/sleak-logo.7441a400.svg",
+  "index.html": "https:/sleak-mag.design/index.html",
+  "src/assets/icons/apple-icon-57x57.png": "https:/sleak-mag.design/apple-icon-57x57.cb18aa0e.png",
+  "src/assets/icons/apple-icon-60x60.png": "https:/sleak-mag.design/apple-icon-60x60.9d5af3da.png",
+  "src/assets/icons/apple-icon-72x72.png": "https:/sleak-mag.design/apple-icon-72x72.900c6d81.png",
+  "src/assets/icons/apple-icon-76x76.png": "https:/sleak-mag.design/apple-icon-76x76.fed0a850.png",
+  "src/assets/icons/apple-icon-114x114.png": "https:/sleak-mag.design/apple-icon-114x114.041be133.png",
+  "src/assets/icons/apple-icon-120x120.png": "https:/sleak-mag.design/apple-icon-120x120.3eb65e82.png",
+  "src/assets/icons/apple-icon-144x144.png": "https:/sleak-mag.design/apple-icon-144x144.4814b7ab.png",
+  "src/assets/icons/apple-icon-152x152.png": "https:/sleak-mag.design/apple-icon-152x152.a12497a8.png",
+  "src/assets/icons/apple-icon-180x180.png": "https:/sleak-mag.design/apple-icon-180x180.c63da61c.png",
+  "src/assets/icons/android-icon-192x192.png": "https:/sleak-mag.design/android-icon-192x192.a15448df.png",
+  "src/assets/icons/favicon-32x32.png": "https:/sleak-mag.design/favicon-32x32.31603053.png",
+  "src/assets/icons/favicon-96x96.png": "https:/sleak-mag.design/favicon-96x96.a11b218b.png",
+  "src/assets/icons/favicon-16x16.png": "https:/sleak-mag.design/favicon-16x16.62f4017a.png",
+  "src/assets/manifest.webmanifest": "https:/sleak-mag.design/manifest.12c4c246.webmanifest",
+  "src/assets/icons/android-icon-36x36.png": "https:/sleak-mag.design/android-icon-36x36.357992ce.png",
+  "src/assets/icons/android-icon-48x48.png": "https:/sleak-mag.design/android-icon-48x48.453bb705.png",
+  "src/assets/icons/android-icon-72x72.png": "https:/sleak-mag.design/android-icon-72x72.900c6d81.png",
+  "src/assets/icons/android-icon-96x96.png": "https:/sleak-mag.design/android-icon-96x96.a11b218b.png",
+  "src/assets/icons/android-icon-144x144.png": "https:/sleak-mag.design/android-icon-144x144.4814b7ab.png",
+  "src/assets/icons/android-icon-512x512.png": "https:/sleak-mag.design/android-icon-512x512.b3f27cdc.png",
+  "src/assets/icons/android-icon-1024x1024.png": "https:/sleak-mag.design/android-icon-1024x1024.8018bda3.png",
+  "src/assets/icons/ms-icon-144x144.png": "https:/sleak-mag.design/ms-icon-144x144.b6c72459.png",
+  "src/main.js": "https:/sleak-mag.design/main.7261bb14.js",
+  "src/assets/styles/fonts.css": "https:/sleak-mag.design/main.04663e0d.css",
+  "src/assets/fonts/BebasNeue.otf": "https:/sleak-mag.design/BebasNeue.543f6143.otf",
+  "src/assets/images/image-loading.svg": "https:/sleak-mag.design/image-loading.91ecacb7.svg",
+  "serviceworker.js": "https:/sleak-mag.design/serviceworker.js",
+  "src/assets/images/sleak-logo.svg": "https:/sleak-mag.design/sleak-logo.7441a400.svg",
   "team.html": "/team.html",
   "src/team.js": "/team.2fe9c42e.js",
   "print.html": "/print.html",
