--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sleak-magazine",
   "private": true,
-  "version": "2.3.3",
+  "version": "2.3.4",
   "description": "Website for »sleak« – design magazine",
   "scripts": {
     "serve": "node scripts/serve.js",
     "build": "parcel build index.html --no-cache --public-url https://sleak-mag.design",
+    "build:local": "parcel build index.html --no-cache",
     "deploy": "npm run build && node scripts/deploy.js",
     "lint": "eslint ./ --fix",
     "prettier": "prettier --write *.{js,json,css,md,html}"
