--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -22,8 +22,8 @@
   "src/assets/icons/android-icon-512x512.png": "https:/sleak-mag.design/android-icon-512x512.b3f27cdc.png",
   "src/assets/icons/android-icon-1024x1024.png": "https:/sleak-mag.design/android-icon-1024x1024.8018bda3.png",
   "src/assets/icons/ms-icon-144x144.png": "https:/sleak-mag.design/ms-icon-144x144.b6c72459.png",
-  "src/assets/styles/index.css": "https:/sleak-mag.design/styles.4e1e03c7.css",
-  "src/assets/styles/fonts.css": "https:/sleak-mag.design/styles.c293d930.map",
+  "src/assets/styles/index.css": "https:/sleak-mag.design/styles.91d4ca0b.css",
+  "src/assets/styles/fonts.css": "https:/sleak-mag.design/styles.c9a74c36.map",
   "src/assets/fonts/BebasNeue.otf": "https:/sleak-mag.design/BebasNeue.543f6143.otf",
   "src/assets/images/image-loading.svg": "https:/sleak-mag.design/image-loading.91ecacb7.svg",
   "src/main.js": "https:/sleak-mag.design/main.98f6ea22.js",
@@ -55,5 +55,6 @@
   "rechtliches.html": "https:/sleak-mag.design/rechtliches.html",
   "src/imprint.js": "https:/sleak-mag.design/imprint.c0f53f96.js",
   "404.html": "https:/sleak-mag.design/404.html",
-  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/index.js"
+  "node_modules/parcel-bundler/src/builtins/css-loader.js": "/styles.f8454dac.map",
+  "src/assets/styles/404.css": "https:/sleak-mag.design/404.e8b858d3.css"
 }
