--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -26,11 +26,11 @@
   "src/assets/styles/fonts.css": "https:/sleak-mag.design/styles.f069baa3.map",
   "src/assets/fonts/BebasNeue.otf": "https:/sleak-mag.design/BebasNeue.543f6143.otf",
   "src/assets/images/image-loading.svg": "https:/sleak-mag.design/image-loading.91ecacb7.svg",
-  "src/main.js": "https:/sleak-mag.design/main.ee7aa864.js",
+  "src/main.js": "https:/sleak-mag.design/main.89583890.js",
   "serviceworker.js": "https:/sleak-mag.design/serviceworker.js",
   "src/assets/images/sleak-logo.svg": "https:/sleak-mag.design/sleak-logo.7441a400.svg",
   "team.html": "https:/sleak-mag.design/team.html",
-  "src/team.js": "https:/sleak-mag.design/team.1dcee089.js",
+  "src/team.js": "https:/sleak-mag.design/team.e6dbad9d.js",
   "src/assets/images/team/felix.jpg": "https:/sleak-mag.design/felix.c18d6a85.jpg",
   "src/assets/images/team/michaela.jpg": "https:/sleak-mag.design/michaela.b3caf84a.jpg",
   "src/assets/images/team/viktoria.jpg": "https:/sleak-mag.design/viktoria.3d42f0f8.jpg",
@@ -53,7 +53,7 @@
   "src/assets/images/sleak-print.jpg": "https:/sleak-mag.design/sleak-print.2b889f06.jpg",
   "src/assets/images/sleak-opened-2200x.jpg": "https:/sleak-mag.design/sleak-opened-2200x.0109bfb5.jpg",
   "rechtliches.html": "https:/sleak-mag.design/rechtliches.html",
-  "src/imprint.js": "https:/sleak-mag.design/imprint.3b80f0f4.js",
+  "src/imprint.js": "/imprint.6a5d16e5.js",
   "404.html": "https:/sleak-mag.design/404.html",
   "node_modules/parcel-bundler/src/builtins/css-loader.js": "/styles.f8454dac.map",
   "src/assets/styles/404.css": "https:/sleak-mag.design/404.e8b858d3.css"
