--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "parcel-bundler": "^1.10.3",
     "parcel-plugin-bundle-manifest": "^0.2.0",
     "parcel-plugin-clean-dist": "0.0.6",
-    "parcel-plugin-sitemap-exclude": "^1.0.0",
+    "parcel-plugin-sitemap": "^2.0.1",
     "parcel-plugin-static": "^1.0.0",
     "postcss-custom-media": "^7.0.7",
     "postcss-focus-visible": "^4.0.0",
