chore: add licensing information

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "url": "https://github.com/riekehieke"
     }
   ],
-  "license": "",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/jonaskuske/sleak-magazine/issues"
   },
