--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sleak-magazine",
   "private": true,
-  "version": "2.9.0",
+  "version": "2.9.1",
   "description": "Website for »sleak« – design magazine",
   "scripts": {
     "serve": "node scripts/serve.js",
@@ -40,36 +40,36 @@
   },
   "homepage": "https://github.com/jonaskuske/sleak-magazine#readme",
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "autoprefixer": "^9.4.2",
-    "chalk": "^2.4.1",
-    "eslint": "^5.9.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-prettier": "^3.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "autoprefixer": "^9.4.7",
+    "chalk": "^2.4.2",
+    "eslint": "^5.13.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.16.4",
-    "fast-glob": "^2.2.4",
+    "fast-glob": "^2.2.6",
     "gh-pages": "^2.0.1",
-    "lint-staged": "^8.1.0",
-    "parcel-bundler": "^1.10.3",
+    "lint-staged": "^8.1.3",
+    "parcel-bundler": "^1.11.0",
+    "parcel-plugin-asset-copier": "^1.0.0",
     "parcel-plugin-bundle-manifest": "^0.2.0",
     "parcel-plugin-clean-dist": "0.0.6",
     "parcel-plugin-sitemap": "^2.0.1",
-    "parcel-plugin-static": "^1.0.0",
     "postcss-custom-media": "^7.0.7",
     "postcss-focus-visible": "^4.0.0",
     "postcss-smoothscroll-anchor-polyfill": "^1.0.0",
     "posthtml-expressions": "^1.1.0",
-    "prettier": "^1.15.3",
-    "rimraf": "^2.6.2",
+    "prettier": "^1.16.4",
+    "rimraf": "^2.6.3",
     "simple-git": "^1.107.0",
-    "smoothscroll-anchor-polyfill": "^1.0.0",
+    "smoothscroll-anchor-polyfill": "^1.2.0",
     "write-pkg": "^3.2.0",
     "yorkie": "^2.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "element-closest": "^2.0.2",
+    "@babel/polyfill": "^7.2.5",
+    "element-closest": "^3.0.1",
     "focus-visible": "^4.1.5",
     "intersection-observer": "^0.5.1",
     "normalize.css": "^8.0.1",
@@ -83,10 +83,7 @@
     "> 1%",
     "not dead"
   ],
-  "parcel-plugin-static": {
-    "source": "static",
-    "destination": ""
-  },
+  "assetsPath": "static",
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
