--- a/package.json
+++ b/package.json
@@ -40,17 +40,18 @@
   },
   "homepage": "https://github.com/jonaskuske/sleak-magazine#readme",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^9.4.7",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "autoprefixer": "^9.4.10",
     "chalk": "^2.4.2",
-    "eslint": "^5.13.0",
-    "eslint-config-prettier": "^4.0.0",
+    "dotenv": "^6.2.0",
+    "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.16.4",
     "fast-glob": "^2.2.6",
     "gh-pages": "^2.0.1",
-    "lint-staged": "^8.1.3",
+    "lint-staged": "^8.1.5",
     "parcel-bundler": "^1.11.0",
     "parcel-plugin-asset-copier": "^1.0.0",
     "parcel-plugin-bundle-manifest": "^0.2.0",
