--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -1,58 +1,58 @@
 {
-  "index.html": "https:/sleak-mag.design/index.html",
-  "src/assets/icons/apple-icon-57x57.png": "https:/sleak-mag.design/apple-icon-57x57.cb18aa0e.png",
-  "src/assets/icons/apple-icon-60x60.png": "https:/sleak-mag.design/apple-icon-60x60.9d5af3da.png",
-  "src/assets/icons/apple-icon-72x72.png": "https:/sleak-mag.design/apple-icon-72x72.900c6d81.png",
-  "src/assets/icons/apple-icon-76x76.png": "https:/sleak-mag.design/apple-icon-76x76.fed0a850.png",
-  "src/assets/icons/apple-icon-114x114.png": "https:/sleak-mag.design/apple-icon-114x114.041be133.png",
-  "src/assets/icons/apple-icon-120x120.png": "https:/sleak-mag.design/apple-icon-120x120.3eb65e82.png",
-  "src/assets/icons/apple-icon-144x144.png": "https:/sleak-mag.design/apple-icon-144x144.4814b7ab.png",
-  "src/assets/icons/apple-icon-152x152.png": "https:/sleak-mag.design/apple-icon-152x152.a12497a8.png",
-  "src/assets/icons/apple-icon-180x180.png": "https:/sleak-mag.design/apple-icon-180x180.c63da61c.png",
-  "src/assets/icons/android-icon-192x192.png": "https:/sleak-mag.design/android-icon-192x192.a15448df.png",
-  "src/assets/icons/favicon-32x32.png": "https:/sleak-mag.design/favicon-32x32.31603053.png",
-  "src/assets/icons/favicon-96x96.png": "https:/sleak-mag.design/favicon-96x96.a11b218b.png",
-  "src/assets/icons/favicon-16x16.png": "https:/sleak-mag.design/favicon-16x16.62f4017a.png",
-  "src/assets/manifest.webmanifest": "https:/sleak-mag.design/manifest.12c4c246.webmanifest",
-  "src/assets/icons/android-icon-36x36.png": "https:/sleak-mag.design/android-icon-36x36.357992ce.png",
-  "src/assets/icons/android-icon-48x48.png": "https:/sleak-mag.design/android-icon-48x48.453bb705.png",
-  "src/assets/icons/android-icon-72x72.png": "https:/sleak-mag.design/android-icon-72x72.900c6d81.png",
-  "src/assets/icons/android-icon-96x96.png": "https:/sleak-mag.design/android-icon-96x96.a11b218b.png",
-  "src/assets/icons/android-icon-144x144.png": "https:/sleak-mag.design/android-icon-144x144.4814b7ab.png",
-  "src/assets/icons/android-icon-512x512.png": "https:/sleak-mag.design/android-icon-512x512.b3f27cdc.png",
-  "src/assets/icons/android-icon-1024x1024.png": "https:/sleak-mag.design/android-icon-1024x1024.8018bda3.png",
-  "src/assets/icons/ms-icon-144x144.png": "https:/sleak-mag.design/ms-icon-144x144.b6c72459.png",
-  "src/assets/styles/index.css": "https:/sleak-mag.design/styles.674f9300.css",
-  "src/assets/styles/fonts.css": "https:/sleak-mag.design/styles.c5f60cbd.map",
-  "src/assets/fonts/BebasNeue.otf": "https:/sleak-mag.design/BebasNeue.543f6143.otf",
-  "src/assets/images/image-loading.svg": "https:/sleak-mag.design/image-loading.91ecacb7.svg",
-  "src/utils/appshell.js": "https:/sleak-mag.design/appshell.cdef669c.js",
-  "serviceworker.js": "https:/sleak-mag.design/serviceworker.js",
-  "src/main.js": "https:/sleak-mag.design/main.0bc52f17.js",
-  "src/assets/images/sleak-logo.svg": "https:/sleak-mag.design/sleak-logo.7441a400.svg",
-  "team.html": "https:/sleak-mag.design/team.html",
-  "src/team.js": "https:/sleak-mag.design/team.10e3fdcd.js",
-  "src/assets/images/team/felix.jpg": "https:/sleak-mag.design/felix.c18d6a85.jpg",
-  "src/assets/images/team/michaela.jpg": "https:/sleak-mag.design/michaela.b3caf84a.jpg",
-  "src/assets/images/team/viktoria.jpg": "https:/sleak-mag.design/viktoria.3d42f0f8.jpg",
-  "src/assets/images/team/max.jpg": "https:/sleak-mag.design/max.e4e28dfe.jpg",
-  "src/assets/images/team/sevda.jpg": "https:/sleak-mag.design/sevda.4338c591.jpg",
-  "src/assets/images/team/julien.jpg": "https:/sleak-mag.design/julien.64a71d70.jpg",
-  "src/assets/images/team/jonas.jpg": "https:/sleak-mag.design/jonas.2d13705e.jpg",
-  "src/assets/images/team/marvin.jpg": "https:/sleak-mag.design/marvin.e9ef50dd.jpg",
-  "src/assets/images/team/lena.jpg": "https:/sleak-mag.design/lena.0dd6281f.jpg",
-  "src/assets/images/team/rieke.jpg": "https:/sleak-mag.design/rieke.b8e60005.jpg",
-  "src/assets/images/team/jennie.jpg": "https:/sleak-mag.design/jennie.a91bce68.jpg",
-  "src/assets/images/team/judith.jpg": "https:/sleak-mag.design/judith.c5ffacf2.jpg",
-  "src/assets/images/team/lia.jpg": "https:/sleak-mag.design/lia.67bfc31e.jpg",
-  "src/assets/images/team/nadine.jpg": "https:/sleak-mag.design/nadine.7ff03fd7.jpg",
-  "src/assets/images/team/janina.jpg": "https:/sleak-mag.design/janina.86791264.jpg",
-  "src/assets/images/team/axel.jpg": "https:/sleak-mag.design/axel.d44cc483.jpg",
-  "src/assets/images/team/andreas.jpg": "https:/sleak-mag.design/andreas.5fdf51fe.jpg",
-  "print.html": "https:/sleak-mag.design/print.html",
-  "src/assets/images/sleak-print.jpg": "https:/sleak-mag.design/sleak-print.2b889f06.jpg",
-  "src/assets/images/sleak-opened-2200x.jpg": "https:/sleak-mag.design/sleak-opened-2200x.0109bfb5.jpg",
-  "rechtliches.html": "https:/sleak-mag.design/rechtliches.html",
-  "404.html": "https:/sleak-mag.design/404.html",
-  "src/assets/styles/404.css": "https:/sleak-mag.design/404.e8b858d3.css"
+  "index.html": "https:/dmp-magazin.de/index.html",
+  "src/assets/icons/apple-icon-57x57.png": "https:/dmp-magazin.de/apple-icon-57x57.cb18aa0e.png",
+  "src/assets/icons/apple-icon-60x60.png": "https:/dmp-magazin.de/apple-icon-60x60.9d5af3da.png",
+  "src/assets/icons/apple-icon-72x72.png": "https:/dmp-magazin.de/apple-icon-72x72.900c6d81.png",
+  "src/assets/icons/apple-icon-76x76.png": "https:/dmp-magazin.de/apple-icon-76x76.fed0a850.png",
+  "src/assets/icons/apple-icon-114x114.png": "https:/dmp-magazin.de/apple-icon-114x114.041be133.png",
+  "src/assets/icons/apple-icon-120x120.png": "https:/dmp-magazin.de/apple-icon-120x120.3eb65e82.png",
+  "src/assets/icons/apple-icon-144x144.png": "https:/dmp-magazin.de/apple-icon-144x144.4814b7ab.png",
+  "src/assets/icons/apple-icon-152x152.png": "https:/dmp-magazin.de/apple-icon-152x152.a12497a8.png",
+  "src/assets/icons/apple-icon-180x180.png": "https:/dmp-magazin.de/apple-icon-180x180.c63da61c.png",
+  "src/assets/icons/android-icon-192x192.png": "https:/dmp-magazin.de/android-icon-192x192.a15448df.png",
+  "src/assets/icons/favicon-32x32.png": "https:/dmp-magazin.de/favicon-32x32.31603053.png",
+  "src/assets/icons/favicon-96x96.png": "https:/dmp-magazin.de/favicon-96x96.a11b218b.png",
+  "src/assets/icons/favicon-16x16.png": "https:/dmp-magazin.de/favicon-16x16.62f4017a.png",
+  "manifest.webmanifest": "https:/dmp-magazin.de/manifest.webmanifest",
+  "src/assets/icons/android-icon-36x36.png": "https:/dmp-magazin.de/android-icon-36x36.357992ce.png",
+  "src/assets/icons/android-icon-48x48.png": "https:/dmp-magazin.de/android-icon-48x48.453bb705.png",
+  "src/assets/icons/android-icon-72x72.png": "https:/dmp-magazin.de/android-icon-72x72.900c6d81.png",
+  "src/assets/icons/android-icon-96x96.png": "https:/dmp-magazin.de/android-icon-96x96.a11b218b.png",
+  "src/assets/icons/android-icon-144x144.png": "https:/dmp-magazin.de/android-icon-144x144.4814b7ab.png",
+  "src/assets/icons/android-icon-512x512.png": "https:/dmp-magazin.de/android-icon-512x512.b3f27cdc.png",
+  "src/assets/icons/android-icon-1024x1024.png": "https:/dmp-magazin.de/android-icon-1024x1024.8018bda3.png",
+  "src/assets/icons/ms-icon-144x144.png": "https:/dmp-magazin.de/ms-icon-144x144.b6c72459.png",
+  "src/assets/styles/index.css": "https:/dmp-magazin.de/styles.7fdea66a.css",
+  "src/assets/styles/fonts.css": "https:/dmp-magazin.de/styles.63b51bc8.map",
+  "src/assets/fonts/BebasNeue.otf": "https:/dmp-magazin.de/BebasNeue.543f6143.otf",
+  "src/assets/images/image-loading.svg": "https:/dmp-magazin.de/image-loading.91ecacb7.svg",
+  "src/utils/appshell.js": "https:/dmp-magazin.de/appshell.9768b041.js",
+  "serviceworker.js": "https:/dmp-magazin.de/serviceworker.js",
+  "src/main.js": "https:/dmp-magazin.de/main.da3e2893.js",
+  "src/assets/images/sleak-logo.svg": "https:/dmp-magazin.de/sleak-logo.7441a400.svg",
+  "team.html": "https:/dmp-magazin.de/team.html",
+  "src/team.js": "https:/dmp-magazin.de/team.10e3fdcd.js",
+  "src/assets/images/team/felix.jpg": "https:/dmp-magazin.de/felix.c18d6a85.jpg",
+  "src/assets/images/team/michaela.jpg": "https:/dmp-magazin.de/michaela.b3caf84a.jpg",
+  "src/assets/images/team/viktoria.jpg": "https:/dmp-magazin.de/viktoria.3d42f0f8.jpg",
+  "src/assets/images/team/max.jpg": "https:/dmp-magazin.de/max.e4e28dfe.jpg",
+  "src/assets/images/team/sevda.jpg": "https:/dmp-magazin.de/sevda.4338c591.jpg",
+  "src/assets/images/team/julien.jpg": "https:/dmp-magazin.de/julien.64a71d70.jpg",
+  "src/assets/images/team/jonas.jpg": "https:/dmp-magazin.de/jonas.2d13705e.jpg",
+  "src/assets/images/team/marvin.jpg": "https:/dmp-magazin.de/marvin.e9ef50dd.jpg",
+  "src/assets/images/team/lena.jpg": "https:/dmp-magazin.de/lena.0dd6281f.jpg",
+  "src/assets/images/team/rieke.jpg": "https:/dmp-magazin.de/rieke.b8e60005.jpg",
+  "src/assets/images/team/jennie.jpg": "https:/dmp-magazin.de/jennie.a91bce68.jpg",
+  "src/assets/images/team/judith.jpg": "https:/dmp-magazin.de/judith.c5ffacf2.jpg",
+  "src/assets/images/team/lia.jpg": "https:/dmp-magazin.de/lia.67bfc31e.jpg",
+  "src/assets/images/team/nadine.jpg": "https:/dmp-magazin.de/nadine.7ff03fd7.jpg",
+  "src/assets/images/team/janina.jpg": "https:/dmp-magazin.de/janina.86791264.jpg",
+  "src/assets/images/team/axel.jpg": "https:/dmp-magazin.de/axel.d44cc483.jpg",
+  "src/assets/images/team/andreas.jpg": "https:/dmp-magazin.de/andreas.5fdf51fe.jpg",
+  "print.html": "https:/dmp-magazin.de/print.html",
+  "src/assets/images/sleak-print.jpg": "https:/dmp-magazin.de/sleak-print.2b889f06.jpg",
+  "src/assets/images/sleak-opened-2200x.jpg": "https:/dmp-magazin.de/sleak-opened-2200x.0109bfb5.jpg",
+  "rechtliches.html": "https:/dmp-magazin.de/rechtliches.html",
+  "404.html": "https:/dmp-magazin.de/404.html",
+  "src/assets/styles/404.css": "https:/dmp-magazin.de/404.e8b858d3.css"
 }
